demo_service_deployment_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: external-demo-svcs
  labels:
    app: demo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
  type: LoadBalancer
