demo_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - host: hello.demo.com
      http:
        paths:
        - path: /
          backend:
            serviceName: demo
            servicePort: 8080
